# lency

./: .gitignore  Cargo.toml  a.out  bounds_test
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  bootstrap.yml  ci.yml  commit-message.yml  dependabot-auto.yml  editor-release.yml  editor.yml  lints.yml  pr-title.yml  release.yml  tests.yml
assets/: Beryl.txt  CONTEXT.md  Lency.txt  design_spec.md  implement_diagnostics.md  implementation_roadmap.md  next_steps_detailed.md  plan_sprint_13_import_trait.md  plan_sprint_15_bootstrapping.md  refactor_monomorph.md  roadmap.md  rules.md  sprint_10_adt_match.md  sprint_13_bootstrapping.md  sprint_7_generics.md  sprint_8_trait.md  sprint_status.md  struct_design.md  task.md
crates/beryl_cli/: Cargo.toml
crates/beryl_codegen/: Cargo.toml
crates/beryl_sema/: Cargo.toml
crates/lency_codegen/: Cargo.toml
crates/lency_diagnostics/: Cargo.toml
crates/lency_driver/: Cargo.toml
crates/lency_driver/src/: error.rs  lib.rs
crates/lency_ls/: Cargo.toml
crates/lency_ls/src/: lib.rs  main.rs
crates/lency_ls/tests/: integration.rs
crates/lency_monomorph/: Cargo.toml
docs/: README.md
docs/basics/: control-flow.md  functions.md  variables.md
docs/stdlib/: file-io.md  hashmap.md  string.md  vec.md
docs/tools/: scripts.md
docs/types/: bool.md  enums.md  float.md  null-safety.md  primitives.md  structs.md
editors/: .gitignore  FUTURE_PLAN.md  README.md  test.lcy
editors/prompt/: context.md
editors/scripts/: dev_ide.mjs  run_python_checks.mjs
editors/vscode/: .gitignore  .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
examples/: bool_comprehensive.brl  float_comprehensive.brl  float_type_promotion.brl  simple_type_promotion.brl  string_assign.brl  string_concat.brl  string_concat_literal.brl  string_literal.brl  test.brl  test_array_expressions.brl  test_array_functions.brl  test_bool.brl  test_float.brl  test_for_loop.brl  test_match_int.brl  test_print_intrinsic.brl  test_struct.brl
lencyc/: README.md
lencyc/cli/: args.lcy
lencyc/codegen/: lir.lcy
lencyc/driver/: main.lcy  pipeline_sample.lcy  test_cases.lcy  test_entry.lcy  test_steps_const.lcy  test_steps_enum.lcy  test_steps_import_extern.lcy  test_steps_parser_frontend.lcy  test_steps_signature.lcy  test_support.lcy  (+1 more)
prompt/: context.md  rules.md
scripts/: check_banned_patterns.py  check_commit_messages.py  check_editor.sh  check_file_size.py  check_todos.py  dev_ide.sh  run_checks.sh  run_lcy_tests.sh  run_lency_checks.sh
tests/: parser_debug.brl  struct_test.beryl
(+343 files in other folders)
