[workspace]
resolver = "2"

# 注册所有子模块
members = [
    "crates/lency_cli",
    "crates/lency_driver",
    "crates/lency_diagnostics",
    "crates/lency_syntax",
    "crates/lency_sema",
    "crates/lency_monomorph",
    "crates/lency_codegen",
    "crates/lency_runtime",
]

# 【关键】统一依赖版本管理
# 子 crate 使用时只需要写 dependencies.xxx = { workspace = true }

[workspace.dependencies]
# --- 1. 命令行与工具 ---
clap = { version = "4.5", features = ["derive"] }  # 命令行参数解析
colored = "2.1"                                   # 终端颜色
anyhow = "1.0"                                    # 错误处理
thiserror = "1.0"                                 # 自定义错误派生
bitflags = "2.4"                                  # 位掩码标志

# --- 2. 编译器前端 (Lexer & Parser) ---
logos = "0.14"         # 极速词法分析器 (基于状态机生成)
chumsky = "0.9"        # 极其优雅的 Parser Combinator (容错性强)
ariadne = "0.4"        # 漂亮的编译器报错 (Rust 风格)
lasso = "0.7"          # 字符串驻留 (String Interning)，优化编译器性能

# --- 3. 编译器后端 (LLVM) ---
# 注意：inkwell 依赖系统安装的 LLVM。
# 这里选择 llvm15 是因为它比较稳定。如果你的系统是 LLVM 16/17，请相应修改 feature
inkwell = { version = "0.4", features = ["llvm15-0"] }

# --- 4. 项目内相互依赖 (路径映射) ---
lency_cli = { path = "crates/lency_cli" }
lency_driver = { path = "crates/lency_driver" }
lency_diagnostics = { path = "crates/lency_diagnostics" }
lency_syntax = { path = "crates/lency_syntax" }
lency_sema = { path = "crates/lency_sema" }
lency_monomorph = { path = "crates/lency_monomorph" }
lency_codegen = { path = "crates/lency_codegen" }
lency_runtime = { path = "crates/lency_runtime" }

# 解决 macOS 链接器符号名过长问题
[profile.dev]
debug = 1  # 只保留行号信息，大幅减少符号长度
split-debuginfo = "unpacked"
opt-level = 0  # 保持快速编译

[profile.test]
debug = 1  # 测试时也使用相同设置
split-debuginfo = "unpacked"