[package]
name = "lency_ls"
version = "0.1.0"
edition = "2024"

[dependencies]
lency_syntax = { workspace = true }
lency_sema = { path = "../lency_sema" }
lency_diagnostics = { workspace = true }
tower-lsp = "0.20"
lsp-types = "0.94"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
[dev-dependencies]
tower = "0.4"
futures = "0.3"
